--- a/Index.Rmd
+++ b/Index.Rmd
@@ -8,6 +8,16 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+git status #checks current status of repository
+
+git add -A #adds altered and untracked files to staging area
+
+git commit -am "<message>" #commit changes with message
+
+git push #push committed changes up to GitHub
+
+git pull #pull any changes from GitHub down to local repo
+
 
 ## R Markdown
 
